# rocup

./: CMakeLists.txt  README.md  package.xml  setup.py
action/: RobotMotion.action  TextCommand.action
data/tf_paths/: example_path.txt  target_grasp_path.txt
data/ui/: robot_gui.ui
include/bonmet_robot/: bonmet_c60.h
include/bonmet_robot/ikine6s_full/: acos.h  eye.h  ikine6s_full.h  ikine6s_full_initialize.h  ikine6s_full_terminate.h  ikine6s_full_types.h  norm.h  rotx.h  rotz.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h  sqrt.h
include/grasshopper_robot/: grasshopper.h
launch/robots/bonmet/: bonmet.launch  bonmet_real_stack.launch
launch/robots/comau/: comau.launch  comau_real_stack.launch  comau_sim_stack.launch
launch/robots/grasshopper/: grasshopper.launch  grasshopper_real_stack.launch
launch/robots/schunk/: schunk_real_stack.launch
launch/testing/: world_tf.launch
launch/tf_paths/: tf_path_example.launch  tf_path_target_grasp.launch
msg/: MachineAlarmStatus.msg  RobotFollow.msg  RobotFollowStatus.msg  UiEvent.msg  UiFeedback.msg
rviz/: robot_test.rviz
rviz/comau/: comau_simple.rviz
scripts/nodes/examples/command_proxy_example/: command_proxy_example_client.py  command_proxy_example_server.py  supervisor_proxy_test_2.py  supervisor_proxy_test_tf_shapes.py
scripts/nodes/examples/gui/: ui_slave_example.py  ui_window_example.py
scripts/nodes/examples/task_manager/: example_task_complete_TODO.py  example_task_fuzzy.py
scripts/nodes/playground/tf_matrix_scan/component_scan/: broadcast_matrix_tf.py  scan_matrix_tf.py  tf_matricies.py
scripts/nodes/playground/tf_matrix_scan/component_scan/withcomau/: component_matrix_tf.py  component_scan.py
scripts/nodes/production/bags/: images_calibration_extraction.py  rosbag_export_image_poses.py  topic_export.py  topic_export_filtering.py  topic_export_light.py
scripts/nodes/production/feedbacks/: compass.py
scripts/nodes/production/gui/: gui_robot.py
scripts/nodes/production/robots/bonmet/: bonmet_direct_motion.py  bonmet_joint_command_sequencer.py  bonmet_supervisor.py  bonmet_trajectory_motion.py
scripts/nodes/production/robots/comau/: comau_direct_motion.py  comau_supervisor.py  comau_trajectory_motion.py
scripts/nodes/production/robots/grasshopper/: grasshopper_direct_motion.py  grasshopper_supervisor.py  grasshopper_trajectory_motion.py
scripts/nodes/production/robots/gripper/: schunk_direct_motion.py  schunk_supervisor.py  schunk_trajectory_motion.py
scripts/nodes/production/sensors/: force.py  tactile.py
scripts/nodes/production/subtasks/: subtask_acquire_target.py  subtask_grasp.py
scripts/nodes/production/tasks/: grasp_task.py
scripts/nodes/production/tfs/: path_from_tf.py  tf_filter.py  tf_manager.py
scripts/nodes/templates/: subtask_template.py  superros_node_subpub_template.py  superros_node_template.py  task_manager_template.py
scripts/nodes/tests/voice_test/: voice_test.py
scripts/rocup/param/: global_error_list.py  global_parameters.py
scripts/rocup/proxy/: alarm_proxy.py  command_proxy.py  proxy_message.py  target_follower_proxy.py
scripts/rocup/robotcontrol/: robot_direct_motion.py
scripts/rocup/robotcontrol/controllers/: force_controllers.py  other_controllers.py
scripts/rocup/robotmotion/: command_interpreter.py  robot_motion_action.py  robot_motion_state_machine.py
scripts/rocup/robots/: controllers.py  market.py  trajectories.py
scripts/rocup/robotsupervisor/: robot_supervisor_state_machine.py
scripts/rocup/sensors/: sensor_manager.py
scripts/rocup/sfm/: machines.py  machinescommands.py
scripts/rocup/storage/: mongo.py  save_parameters.py  save_shape.py  tf_storage.py
scripts/rocup/stubs/: tf_manager_stub.py
scripts/rocup/taskmanager/: task_manager_state_machine.py
scripts/rocup/ui/: pyqt.py  uiproxy.py
scripts/rocup/utils/: tfmatrix.py
src/bonmet_robot/: bonmet_c60.cpp
src/bonmet_robot/ikine6s_full/: acos.cpp  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  eye.cpp  ikine6s_full.cpp  ikine6s_full_initialize.cpp  ikine6s_full_rtw.mk  ikine6s_full_terminate.cpp  norm.cpp  rotx.cpp  rotz.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  rtw_proj.tmw  sqrt.cpp
src/bonmet_robot/ikine6s_full/examples/: main.cpp
src/bonmet_robot/ikine6s_full/html/: report.mldatx
src/bonmet_robot/ikine6s_full/interface/: _coder_ikine6s_full_api.c  _coder_ikine6s_full_info.c  _coder_ikine6s_full_mex.cpp
src/comau_robot/: ComauSmartSix.cpp
src/nodes/bonmet/: bonmet_ik_service.cpp  bonmet_target_follower.cpp
src/nodes/comau/: comau_ik_service.cpp  comau_target_follower.cpp
src/nodes/grasshopper/: grasshopper_ik_service.cpp  grasshopper_target_follower.cpp
src/nodes/schunk/: schunk_ik_service.cpp  schunk_target_follower.cpp
srv/: IKService.srv  RobotFollowSetting.srv  SFMCommand.srv
urdf/bonmet/: bonmetc60.urdf.xacro
urdf/comau/: comau_smart_six.urdf.xacro
urdf/grasshopper/: grasshopper.urdf.xacro
urdf/schunk/: schunk_pg70.xacro
