<?xml version="1.0"?>
<package>
  <name>rocup</name>
  <version>0.2017.0</version>
  <description>The rocup package</description>

  <maintainer email="d.degregorio@unibo.it">daniele de gregorio</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
</package>
